--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
 body{
     font-family: 'Montserrat', sans-serif;
 }
+h1{
+    font-size: 50px;
+}
+.header{
+    display: flex;
+    margin: 150px 5% 150px 5%;
+
+}
+
+.text-color{
+    color: orange;
+}
+
+.half{
+    width: 50%;
+}
+.header-image{
+    width: 50px;
+}
+
+.button{
+    text-decoration: none;
+    padding: 15px 30px 15px 30px;
+    color: white;
+    background-image: linear-gradient(orange, red);
+    border-radius: 100px;
+}
